// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Day renders correctly for disabled date 1`] = `
.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding-top: 38px;
  box-sizing: border-box;
  height: 94px;
  color: #323232;
  background: #fff;
  box-shadow: 0 0 0 1px #eaeaea;
  outline: none;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 35px;
    height: 90px;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  z-index: 2;
  box-shadow: -2px 3px 4px 0 rgba(0,0,0,0.08),2px -3px 4px 0 rgba(0,0,0,0.04);
}

.emotion-1:hover div[class$="runway-calendar__hover-label"] {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  height: 1.125rem;
  padding: 0 4px;
  font-size: 1.125rem;
  line-height: 1.1;
  border-radius: 4px;
  background-color: initial;
  color: inherit;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 1;
  }
}

<div
  aria-label="undefined undefined undefined. Selected for return"
  className="emotion-1 dundefined"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="gridcell"
  tabIndex={-1}
>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`Day renders correctly for end date 1`] = `
.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding-top: 38px;
  box-sizing: border-box;
  height: 94px;
  color: #323232;
  background: #fff;
  box-shadow: 0 0 0 1px #eaeaea;
  outline: none;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 35px;
    height: 90px;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  z-index: 2;
  box-shadow: -2px 3px 4px 0 rgba(0,0,0,0.08),2px -3px 4px 0 rgba(0,0,0,0.04);
}

.emotion-1:hover div[class$="runway-calendar__hover-label"] {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  height: 1.125rem;
  padding: 0 4px;
  font-size: 1.125rem;
  line-height: 1.1;
  border-radius: 4px;
  background-color: initial;
  color: inherit;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 1;
  }
}

<div
  aria-label="undefined undefined undefined. Selected for return"
  className="emotion-1 dundefined"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="gridcell"
  tabIndex={-1}
>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`Day renders correctly for outside date 1`] = `
.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding-top: 38px;
  box-sizing: border-box;
  height: 94px;
  color: #323232;
  background: #fff;
  box-shadow: 0 0 0 1px #eaeaea;
  outline: none;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 35px;
    height: 90px;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  z-index: 2;
  box-shadow: -2px 3px 4px 0 rgba(0,0,0,0.08),2px -3px 4px 0 rgba(0,0,0,0.04);
}

.emotion-1:hover div[class$="runway-calendar__hover-label"] {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  height: 1.125rem;
  padding: 0 4px;
  font-size: 1.125rem;
  line-height: 1.1;
  border-radius: 4px;
  background-color: initial;
  color: inherit;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 1;
  }
}

<div
  aria-label="undefined undefined undefined. Selected for return"
  className="emotion-1 dundefined"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="gridcell"
  tabIndex={-1}
>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`Day renders correctly for selected date 1`] = `
.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding-top: 38px;
  box-sizing: border-box;
  height: 94px;
  color: #323232;
  background: #fff;
  box-shadow: 0 0 0 1px #eaeaea;
  outline: none;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 35px;
    height: 90px;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  z-index: 2;
  box-shadow: -2px 3px 4px 0 rgba(0,0,0,0.08),2px -3px 4px 0 rgba(0,0,0,0.04);
}

.emotion-1:hover div[class$="runway-calendar__hover-label"] {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  height: 1.125rem;
  padding: 0 4px;
  font-size: 1.125rem;
  line-height: 1.1;
  border-radius: 4px;
  background-color: initial;
  color: inherit;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 1;
  }
}

<div
  aria-label="undefined undefined undefined. Selected for return"
  className="emotion-1 dundefined"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="gridcell"
  tabIndex={-1}
>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`Day renders correctly for start date 1`] = `
.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding-top: 38px;
  box-sizing: border-box;
  height: 94px;
  color: #323232;
  background: #fff;
  box-shadow: 0 0 0 1px #eaeaea;
  outline: none;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 35px;
    height: 90px;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  z-index: 2;
  box-shadow: -2px 3px 4px 0 rgba(0,0,0,0.08),2px -3px 4px 0 rgba(0,0,0,0.04);
}

.emotion-1:hover div[class$="runway-calendar__hover-label"] {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  height: 1.125rem;
  padding: 0 4px;
  font-size: 1.125rem;
  line-height: 1.1;
  border-radius: 4px;
  background-color: initial;
  color: inherit;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 1;
  }
}

<div
  aria-label="undefined undefined undefined. Selected for return"
  className="emotion-1 dundefined"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="gridcell"
  tabIndex={-1}
>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`Day renders correctly with defaults 1`] = `
.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding-top: 38px;
  box-sizing: border-box;
  height: 94px;
  color: #323232;
  background: #fff;
  box-shadow: 0 0 0 1px #eaeaea;
  outline: none;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 35px;
    height: 90px;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  z-index: 2;
  box-shadow: -2px 3px 4px 0 rgba(0,0,0,0.08),2px -3px 4px 0 rgba(0,0,0,0.04);
}

.emotion-1:hover div[class$="runway-calendar__hover-label"] {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  height: 1.125rem;
  padding: 0 4px;
  font-size: 1.125rem;
  line-height: 1.1;
  border-radius: 4px;
  background-color: initial;
  color: inherit;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 1;
  }
}

<div
  aria-label="undefined undefined undefined. "
  className="emotion-1 dundefined"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="gridcell"
  tabIndex={-1}
>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`Day renders correctly with props provided 1`] = `
.emotion-1 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  padding-top: 38px;
  box-sizing: border-box;
  height: 94px;
  color: #323232;
  background: #fff;
  box-shadow: 0 0 0 1px #eaeaea;
  outline: none;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    padding-top: 35px;
    height: 90px;
  }
}

.emotion-1:hover,
.emotion-1:focus {
  z-index: 2;
  box-shadow: -2px 3px 4px 0 rgba(0,0,0,0.08),2px -3px 4px 0 rgba(0,0,0,0.04);
}

.emotion-1:hover div[class$="runway-calendar__hover-label"] {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  height: 1.125rem;
  padding: 0 4px;
  font-size: 1.125rem;
  line-height: 1.1;
  border-radius: 4px;
  background-color: initial;
  color: inherit;
}

@media only screen and (min-width:768px) {
  .emotion-0 {
    font-size: 1.375rem;
    line-height: 1;
  }
}

<div
  aria-label="undefined undefined undefined. Selected for return"
  className="emotion-1 dundefined"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  role="gridcell"
  tabIndex={-1}
>
  <div
    className="emotion-0"
  />
</div>
`;
